--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-# Python caches
+# local env/cache
+.venv/
+venv/
 __pycache__/
-*.py[cod]
+*.pyc
 .pytest_cache/
 .mypy_cache/
 
-# Virtual environments
-.venv/
-venv/
-
-# Local/editor
-.idea/
-.vscode/
-
-# Runtime outputs
+# generated outputs
 runs/
 logs/
 
-# Data snapshots and heavy exports
+# local data (NOT in repo)
+data/
 data/raw/
 data/freeze/
 *.parquet
-
-# Environment secrets
-.env
+*.feather
