feat: add WFT + IR reports + decision/index filters

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,3 +9,8 @@ includes:
   thresholds: configs/thresholds.yaml
 
 market_index_ticker: "^OSEAX"
+
+ir_reports:
+  mapping_csv: config/ir_sources.csv
+  rate_limit_sec: 1.0
+  timeout_sec: 20
